# ghc-persistent-worker

./: .buckconfig  .gitignore  BUCK  Client.hs  Main.hs  Message.hs  README.md  Server.hs  Util.hs  Worker.hs  cabal.project  flake.nix  shell.nix
.buckconfig.d/: 01-default-platform
.github/workflows/: buck-test.yaml  test.yaml
buck-multiplex-worker/: BUCK  Main.hs  Message.hs  Server.hs  buck-multiplex-worker.cabal  multiplex-worker.cabal
buck-proxy/: buck-proxy.cabal
buck-proxy/app/buck-proxy/: Main.hs
buck-proxy/lib/BuckProxy/: Orchestration.hs  Run.hs  Util.hs
buck-proxy/lib/BuckProxy/Deprecated/: Orchestration.hs
buck-worker/: AbiHash.hs  Args.hs  BUCK  BUCK.tmp  BuckWorker.hs  Cache.hs  Compile.hs  Error.hs  Log.hs  Main.hs  Session.hs  Worker.hs  buck-worker.cabal  cabal.project  genproto.sh  instrument.proto  readme.md  worker.cabal  worker.proto
buck-worker-2/: BUCK  Main.hs  multiplex-worker.cabal
buck-worker/app/: Main.hs
buck-worker/batch-worker/: Main.hs
buck-worker/ghc-bin/: Main.hs
buck-worker/lib/: BUCK  BUCK.tmp  BuckArgs.hs  BuckWorker.hs  GhcHandler.hs  Grpc.hs  Instrumentation.hs  Orchestration.hs  Run.hs  Test1.hs  TestMake.hs  TestSetup.hs
buck-worker/lib/Proto/: Instrument.hs  Instrument_Fields.hs  Worker.hs  Worker_Fields.hs
buck-worker/test/: CompileHptTest.hs  Main.hs  TestSetup.hs
client/: ghc-persistent-worker-client.cabal
client/app/: Client.hs
comm/: ghc-persistent-worker-comm.cabal
comm/src/: BUCK.tmp  Message.hs
common/: buck-worker-common.cabal
common/src/Common/: Grpc.hs
comparison-1/: BUCK  Test2.hs  run.nix
comparison-2/: BUCK  L1_2_2.hs  L2_1_1.hs  L2_1_2.hs  L2_2_1.hs  L2_2_2.hs  L3_1_1.hs  L3_1_2.hs  L3_1_3.hs  L3_1_4.hs  run.nix
comparison1/: run.nix
comparison2/: run.nix
comparison2/project/: L3_1_102.hs  L3_1_105.hs  L3_1_107.hs  L3_1_122.hs  L3_1_128.hs  L3_1_152.hs  L3_1_153.hs  L3_1_154.hs  L3_1_156.hs  L3_1_160.hs  L3_1_166.hs  L3_1_176.hs  L3_1_18.hs  L3_1_182.hs  L3_1_187.hs  L3_1_19.hs  L3_1_192.hs  L3_1_199.hs  L3_1_2.hs  L3_1_212.hs  L3_1_240.hs  L3_1_243.hs  L3_1_250.hs  L3_1_251.hs  L3_1_26.hs  L3_1_286.hs  L3_1_29.hs  L3_1_293.hs  L3_1_295.hs  L3_1_301.hs  L3_1_303.hs  L3_1_304.hs  L3_1_307.hs  L3_1_314.hs  L3_1_332.hs  L3_1_335.hs  L3_1_347.hs  L3_1_353.hs  L3_1_358.hs  L3_1_36.hs  (+15 more)
debug/: debug.cabal
debug/app/: Main.hs
debug/gen-case/: Data.hs  Main.hs
debug/snapshot/: Main.hs
ghc-persistent-worker-plugin/: CHANGELOG.md  ghc-persistent-worker-plugin.cabal
ghc-persistent-worker-plugin/app/: Client.hs  Server.hs
ghc-persistent-worker-plugin/src/: GHCPersistentWorkerPlugin.hs  Message.hs  Worker.hs
ghc-worker/: LICENSE  ghc-worker.cabal
ghc-worker/app/ghc-worker/: Main.hs
ghc-worker/batch-worker/: Main.hs
ghc-worker/ghc-bin/: Main.hs
ghc-worker/lib/GhcWorker/: Batch.hs  BuckArgs.hs  CompileResult.hs  GhcHandler.hs  Grpc.hs  Instrumentation.hs  Orchestration.hs  Run.hs
ghc-worker/test/: CompileHptTest.hs  TestSetup.hs
grpc/: buck-worker-grpc.cabal
grpc/src/Common/: Grpc.hs
haskell/: BUCK  custom.bzl  defs.bzl  generate_toolchain_libs.py  mercury_haskell.bzl  toolchain.bxl
instrument/: Grpc.hs  Main.hs  UI.hs  instrument.cabal
instrument/UI/: ActiveTasks.hs  GhcDebug.hs  ModuleSelector.hs  Session.hs  SessionSelector.hs  Types.hs  Utils.hs
internal/: CHANGELOG.md  buck-worker-internal.cabal
internal/src/: GHCPersistentWorkerPlugin.hs  Util.hs
internal/src/Internal/: AbiHash.hs  Cache.hs  Compile.hs  CompileHpt.hs  Debug.hs  DynFlags.hs  Error.hs  Log.hs  MakeFile.hs  Metadata.hs  Session.hs  State.hs  UnitEnv.hs
internal/src/Internal/Cache/: Hpt.hs  Metadata.hs
internal/src/Internal/Compile/: Make.hs  Oneshot.hs
internal/src/Internal/MakeFile/: JSON.hs
internal/src/Internal/State/: Finder.hs  Make.hs  Oneshot.hs  Stats.hs  UnitIndex.hs
internal/src/Internal/State/UnitIndex/: Update.hs
myplugin/: myplugin.cabal
myplugin/app/: Server.hs
myplugin/src/: Message.hs  MyPlugin.hs  Worker.hs
myplugin/src/GHC/: Main.hs
nix/: test-client.nix  test-client.zsh
ops/: gen-test-project.zsh  ghc-toolchain-libraries.nix  test-deps.nix
ops/buck/: buck2.nix  overlay.nix  packages.nix
ops/buck-test/: B.hs
ops/buck-test/comparison1/: default.nix
ops/buck-test/comparison1/project/: BUCK  Test1.hs  Test3.hs
ops/buck-test/comparison2/: default.nix
ops/buck-test/comparison2/project/: BUCK  L3_1_1.hs  L3_1_10.hs  L3_1_100.hs  L3_1_101.hs  L3_1_103.hs  L3_1_104.hs  L3_1_106.hs  L3_1_108.hs  (+337 more)
ops/buck-test/hybrid/: default.nix
ops/buck-test/restore/: default.nix
ops/buck-test/three-layers/: default.nix
ops/buck/buck2/: default.nix  hashes.json
ops/buck/buck2-source/: default.nix  pr750.patch  pr771.patch  pr784.patch  pr925.patch  pr968.patch
plugin/: ghc-persistent-worker-plugin.cabal
plugin/src/: BUCK  BUCK.tmp  GHCPersistentWorkerPlugin.hs  Worker.hs
plugin/src-ghc98/: Logger.hs
plugin/src-ghc98/GHC/: Main.hs
plugin/src-ghcHEAD/: Logger.hs
plugin/src-ghcHEAD/GHC/: Main.hs
plugin/src/GHC/: Main.hs
plugin/src/Internal/: AbiHash.hs  Args.hs  Cache.hs  Compile.hs  CompileHpt.hs  CompileMake.hs  Debug.hs  Error.hs  Log.hs  MakeFile.hs  Metadata.hs  Session.hs
plugin/src/Internal/MakeFile/: JSON.hs
pro/: Dep1.hs  Main.hs  readme.md
proto/: buck-worker-proto.cabal  genproto.sh  instrument.proto
proto/src/: BuckWorker.hs  BuckWorkerProto.hs
proto/src/Proto/: Instrument.hs  Instrument_Fields.hs  Worker_Fields.hs
server/: ghc-persistent-worker-server.cabal
server/app/: BUCK  Main.hs  Pool.hs  Server.hs  Worker.hs
server/lib/: Pool.hs  Worker.hs
test/: A.hs  C.hs
toolchains/: .buckconfig  BUCK  ghci_iserv.tpl  ghci_script.tpl  impure_worker.bzl  libs.bzl  nix.bzl  nix_cxx_toolchain.bzl  nix_haskell_toolchain.bzl
toolchains/tools/: BUCK  nix_wrapper.py
types/: buck-worker-types.cabal
types/src/Types/: Args.hs  BuckArgs.hs  CachedDeps.hs  Env.hs  GhcHandler.hs  Grpc.hs  Instrument.hs  Log.hs  Orchestration.hs  State.hs  Target.hs
types/src/Types/State/: Finder.hs  Make.hs  Oneshot.hs  Stats.hs
(+61 files in other folders)
