cabal-version: 2.2
name: buck-multiplex-worker
version: 0.1
synopsis: Buck2 GHC persistent worker
license: MIT
license-file: LICENSE
build-type: Simple

executable multiplex-worker
  main-is: Main.hs
  other-modules:
    Message
    Pool
    Server
    Util
    Worker
  hs-source-dirs: .
  ghc-options: -Wall -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base ==4.*,
    binary,
    bytestring,
    containers,
    deepseq,
    directory,
    extra,
    filepath,
    ghc,
    ghc-persistent-worker-plugin,
    network,
    optparse-applicative,
    process,
    stm,
    text,
    time,
    transformers,
    unix,
    vector,
    buck-worker
  default-language: GHC2021
  default-extensions:
    BlockArguments,
    DerivingStrategies,
    DuplicateRecordFields,
    LambdaCase,
    NamedFieldPuns,
    OverloadedLists,
    OverloadedRecordDot,
    OverloadedStrings,
    RecordWildCards,
    StrictData
