cabal-version: 2.2
name:           multiplex-worker
version:        0.1
synopsis:       Buck2 GHC persistent worker
license:        MIT
build-type:     Simple

executable multiplex-worker
  main-is: Main.hs
  hs-source-dirs: .
  ghc-options: -Wall -Werror -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base ==4.*,
    containers,
    ghc,
    ghc-persistent-worker-comm,
    ghc-persistent-worker-plugin,
    ghc-persistent-worker-server,
    stm,
    text,
    transformers,
    vector,
    worker
  default-language: GHC2021
  default-extensions:
    BlockArguments,
    DerivingStrategies,
    DuplicateRecordFields,
    LambdaCase,
    NamedFieldPuns,
    OverloadedLists,
    OverloadedRecordDot,
    OverloadedStrings,
    RecordWildCards,
    StrictData
