cabal-version: 2.2
name: buck-worker
version: 0.1
synopsis: Buck2 GHC persistent worker
license: MIT
license-file: LICENSE
build-type: Simple

common all
  ghc-options: -Wall -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages
  default-language: GHC2021
  default-extensions:
    BlockArguments,
    DataKinds,
    DerivingStrategies,
    DuplicateRecordFields,
    LambdaCase,
    NamedFieldPuns,
    OverloadedLists,
    OverloadedRecordDot,
    OverloadedStrings,
    RecordWildCards,
    StrictData,
    TypeFamilies
  build-depends:
    base ==4.*,
    containers

library
  import: all
  hs-source-dirs: lib
  exposed-modules:
    BuckArgs,
    BuckWorker,
    Grpc,
    Proto.Worker,
    Proto.Worker_Fields
    Proto.Instrument,
    Proto.Instrument_Fields
  build-depends:
    bytestring,
    deepseq,
    filepath,
    ghc-persistent-worker-plugin,
    grapesy ^>=1.0.1,
    lens-family,
    proto-lens,
    text,
    vector

executable worker
  import: all
  main-is: Main.hs
  hs-source-dirs: .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    async,
    directory,
    exceptions,
    filepath,
    grapesy,
    ghc,
    ghc-persistent-worker-plugin,
    text,
    buck-worker

test-suite worker-test
  import: all
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    CompileHptTest,
    TestSetup
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  build-depends:
    directory,
    filepath,
    ghc,
    ghc-persistent-worker-plugin,
    temporary,
    transformers,
    typed-process
