cabal-version: 2.2
name: buck-worker
version: 0.1
synopsis: Buck2 GHC persistent worker
license: MIT
license-file: LICENSE
build-type: Simple

common all
  ghc-options: -Wall -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages
  default-language: GHC2021
  default-extensions:
    BlockArguments,
    DataKinds,
    DerivingStrategies,
    DuplicateRecordFields,
    LambdaCase,
    NamedFieldPuns,
    OverloadedLists,
    OverloadedRecordDot,
    OverloadedStrings,
    RecordWildCards,
    StrictData,
    TypeFamilies
  build-depends:
    base ==4.*

library
  import: all
  ghc-options: -O2
  hs-source-dirs: lib
  exposed-modules:
    BuckArgs,
    GhcHandler,
    Grpc,
    Instrumentation,
    Orchestration,
    Run
  build-depends:
    async,
    buck-worker-internal,
    buck-worker-proto,
    buck-worker-types,
    containers,
    deepseq,
    directory,
    exceptions,
    filepath,
    ghc,
    grapesy ^>=1.0.1,
    process,
    split,
    text

executable ghc-worker
  import: all
  main-is: app/ghc-worker/Main.hs
  hs-source-dirs: .
  ghc-options: -O2 -threaded "-with-rtsopts=-N -T"
  build-depends:
    buck-worker,
    buck-worker-internal

test-suite worker-test
  import: all
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    CompileHptTest,
    TestSetup
  ghc-options: -threaded -rtsopts "-with-rtsopts=-N -T"
  build-depends:
    buck-worker-internal,
    containers,
    directory,
    filepath,
    ghc,
    temporary,
    transformers,
    typed-process
