cabal-version: 2.2
name:           worker-demo
version:        0.1
synopsis:       Worker demo
license:        BSD-2-Clause-Patent
build-type:     Simple

executable worker-demo
  main-is: Main.hs
  hs-source-dirs:
      .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base ==4.*
    , extra
    , unix
    , grpc-haskell
  default-language: GHC2021
  default-extensions:
    BlockArguments,
    DerivingStrategies,
    RecordWildCards,
    DuplicateRecordFields,
    OverloadedRecordDot,
    StrictData,
    NoFieldSelectors
