cabal-version: 2.2
name: worker
version: 0.1
synopsis: Buck2 GHC persistent worker
license: MIT
build-type: Simple

common all
  ghc-options: -Wall -Werror -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages
  default-language: GHC2021
  default-extensions:
    BlockArguments,
    DerivingStrategies,
    DuplicateRecordFields,
    LambdaCase,
    NamedFieldPuns,
    OverloadedLists,
    OverloadedRecordDot,
    OverloadedStrings,
    RecordWildCards,
    StrictData
  build-depends:
    base ==4.*,
    containers,
    text,
    vector

library
  import: all
  hs-source-dirs: lib
  exposed-modules: BuckArgs, BuckWorker
  build-depends:
    bytestring,
    deepseq,
    ghc-persistent-worker-plugin,
    grpc-haskell,
    proto3-suite,
    proto3-wire

executable worker
  import: all
  main-is: Main.hs
  hs-source-dirs: .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    grpc-haskell,
    ghc,
    ghc-persistent-worker-plugin,
    worker
