cabal-version: 2.2
name: worker
version: 0.1
synopsis: Buck2 GHC persistent worker
license: MIT
build-type: Simple

common all
  ghc-options: -Wall -Werror -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages
  default-language: GHC2021
  default-extensions:
    BlockArguments,
    DataKinds,
    DerivingStrategies,
    DuplicateRecordFields,
    LambdaCase,
    NamedFieldPuns,
    OverloadedLists,
    OverloadedRecordDot,
    OverloadedStrings,
    RecordWildCards,
    StrictData,
    TypeFamilies
  build-depends:
    base ==4.*,
    containers

library
  import: all
  hs-source-dirs: lib
  exposed-modules:
    BuckArgs,
    BuckWorker,
    Proto.Worker,
    Proto.Worker_Fields
  build-depends:
    bytestring,
    deepseq,
    filepath,
    ghc-persistent-worker-plugin,
    grapesy,
    lens-family,
    proto-lens,
    text,
    vector

executable worker
  import: all
  main-is: Main.hs
  hs-source-dirs: .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    async,
    directory,
    filepath,
    grapesy,
    ghc,
    ghc-persistent-worker-plugin,
    text,
    worker
