cabal-version:      3.4
name:               ghc-persistent-worker-client
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Ian-Woo Kim
maintainer:         ianwookim@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Client
    main-is:          Client.hs
    hs-source-dirs:   app
    build-depends:    base,
                      binary,
                      bytestring,
                      ghc-persistent-worker-comm,
                      network
    default-language: GHC2021
