cabal-version: 2.2
name: ghc-worker
version: 0.1
synopsis: Buck2 GHC persistent worker
license: MIT
license-file: LICENSE
build-type: Simple

common all
  ghc-options: -Wall -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages
  default-language: GHC2021
  default-extensions:
    BlockArguments,
    DataKinds,
    DerivingStrategies,
    DuplicateRecordFields,
    LambdaCase,
    NamedFieldPuns,
    OverloadedLists,
    OverloadedRecordDot,
    OverloadedStrings,
    RecordWildCards,
    StrictData,
    TypeFamilies
  build-depends:
    base ==4.*

library
  import: all
  ghc-options: -O2
  hs-source-dirs: lib
  exposed-modules:
    GhcWorker.BuckArgs
    GhcWorker.GhcHandler
    GhcWorker.Grpc
    GhcWorker.Instrumentation
    GhcWorker.Orchestration
    GhcWorker.Run
  build-depends:
    async,
    buck-worker-grpc,
    buck-worker-internal,
    buck-worker-proto,
    buck-worker-types,
    containers,
    deepseq,
    directory,
    exceptions,
    filepath,
    ghc,
    grapesy ^>=1.0.1,
    process,
    stm,
    text,
    unix

executable ghc-worker
  import: all
  main-is: Main.hs
  hs-source-dirs: app/ghc-worker
  ghc-options: -O2 -threaded "-with-rtsopts=-N -T"
  build-depends:
    ghc-worker

test-suite worker-test
  import: all
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    CompileHptTest,
    TestSetup
  ghc-options: -threaded -rtsopts "-with-rtsopts=-N -T"
  build-depends:
    buck-worker-internal,
    buck-worker-types,
    containers,
    directory,
    filepath,
    ghc,
    temporary,
    transformers,
    typed-process
