cabal-version: 2.2
name: instrument
version: 0.1
synopsis: GHC persistent worker instrumentation
license: MIT
build-type: Simple

executable instrument
  main-is: Main.hs
  hs-source-dirs: .
  other-modules:
    Grpc
    UI
    UI.ActiveTasks
    UI.ModuleSelector
    UI.Session
    UI.SessionSelector
    UI.Types
    UI.Utils
  ghc-options:
    -Wall -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages
    -threaded -rtsopts -with-rtsopts=-N -O2
  default-language: GHC2021
  default-extensions:
    BlockArguments,
    DataKinds,
    DerivingStrategies,
    DuplicateRecordFields,
    LambdaCase,
    NamedFieldPuns,
    OverloadedLists,
    OverloadedRecordDot,
    OverloadedStrings,
    RecordWildCards,
    StrictData,
    TypeFamilies
  build-depends:
    base ==4.*,
    brick,
    buck-worker-internal,
    buck-worker-proto,
    buck-worker-types,
    containers,
    directory,
    fsnotify,
    grapesy,
    microlens-platform,
    text,
    time,
    vty
