cabal-version:      3.4
name:               buck-worker-internal
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Ian-Woo Kim
maintainer:         ianwookim@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

flag mwb
    description: use mwb-customized GHC
    manual: True
    default: False

flag mwb-25-07
    description: use mwb-customized GHC from July 2025
    manual: True
    default: False

flag mwb-25-10
    description: use mwb-customized GHC from October 2025
    manual: True
    default: False

library
    ghc-options:      -Wall
    hs-source-dirs:   src
    exposed-modules:  Internal.AbiHash
                      Internal.Cache.Hpt
                      Internal.Cache.Metadata
                      Internal.Compile.Make
                      Internal.Compile.Oneshot
                      Internal.Debug
                      Internal.DynFlags
                      Internal.Error
                      Internal.Log
                      Internal.MakeFile
                      Internal.MakeFile.JSON
                      Internal.Metadata
                      Internal.Session
                      Internal.State
                      Internal.State.Finder
                      Internal.State.Make
                      Internal.State.Oneshot
                      Internal.State.Stats
                      Internal.UnitEnv

    if (impl(ghc >= 9.11))
        build-depends: base ^>=4.21

    if (impl(ghc >= 9.9) && impl(ghc < 9.11))
        build-depends: base ^>=4.20

    if (impl(ghc >= 9.8) && impl(ghc < 9.9))
        build-depends: base ^>=4.19

    if (flag(mwb))
        cpp-options: -DMWB

    if (flag(mwb-25-07))
        cpp-options: -DMWB -DMWB_2025_07

    if (flag(mwb-25-10))
        cpp-options: -DMWB -DMWB_2025_10

    build-depends:    aeson,
                      binary,
                      buck-worker-types,
                      bytestring,
                      containers,
                      directory,
                      exceptions,
                      filepath,
                      ghc,
                      ghc-boot,
                      text,
                      time,
                      transformers,
                      unix
    default-language: GHC2021
    default-extensions:
      BlockArguments,
      DerivingStrategies,
      DuplicateRecordFields,
      LambdaCase,
      NoFieldSelectors,
      OverloadedRecordDot,
      RecordWildCards,
      StrictData
