cabal-version:      3.4
name:               myplugin
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Ian-Woo Kim
maintainer:         ianwookim@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Message
                      MyPlugin
                      Util
    other-modules:    GHC.Main
                      Worker
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1,
                      binary,
                      bytestring,
                      containers,
                      filepath,
                      ghc,
                      ghc-boot,
                      network,
                      transformers,
                      unix
    hs-source-dirs:   src
    default-language: GHC2021
