cabal-version:      3.4
name:               ghc-persistent-worker-plugin
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Ian-Woo Kim
maintainer:         ianwookim@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  GHCPersistentWorkerPlugin
                      Util
    if (impl(ghc > 9.11))
        hs-source-dirs: src-ghcHEAD
        other-modules:  GHC.Main
        build-depends: base ^>=4.20,

    if (impl(ghc >= 9.8) && impl(ghc < 9.9))
        hs-source-dirs: src-ghcHEAD
        other-modules:  GHC.Main
        build-depends: base ^>=4.19,

    build-depends:    binary,
                      bytestring,
                      containers,
                      directory,
                      filepath,
                      ghc,
                      ghc-boot,
                      time,
                      transformers,
                      unix
    default-language: GHC2021
