cabal-version:      3.4
name:               ghc-persistent-worker-plugin
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Ian-Woo Kim
maintainer:         ianwookim@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

flag mwb
    description: use mwb-customized GHC
    manual: True
    default: False

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  GHCPersistentWorkerPlugin
                      Internal.AbiHash
                      Internal.Args
                      Internal.Cache
                      Internal.Compile
                      Internal.CompileHpt
                      Internal.Debug
                      Internal.Error
                      Internal.Log
                      Internal.MakeFile
                      Internal.MakeFile.JSON
                      Internal.Metadata
                      Internal.Session
                      Util
    other-modules:  GHC.Main
                    Logger

    if (impl(ghc >= 9.11))
        hs-source-dirs: src-ghcHEAD

    if (impl(ghc < 9.11))
        hs-source-dirs: src-ghc98

    if (impl(ghc >= 9.9))
        build-depends: base ^>=4.20

    if (impl(ghc >= 9.8) && impl(ghc < 9.9))
        build-depends: base ^>=4.19

    if (flag(mwb))
        cpp-options: -DMWB

    build-depends:    binary,
                      bytestring,
                      containers,
                      deepseq,
                      directory,
                      exceptions,
                      filepath,
                      ghc,
                      ghc-boot,
                      text,
                      time,
                      transformers,
                      unix
    default-language: GHC2021
    default-extensions:
      BlockArguments,
      DerivingStrategies,
      DuplicateRecordFields,
      LambdaCase,
      NoFieldSelectors,
      OverloadedRecordDot,
      RecordWildCards,
      StrictData
