cabal-version:      3.4
name:               ghc-persistent-worker-server
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Ian-Woo Kim
maintainer:         ianwookim@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Server
    main-is:          Server.hs
    hs-source-dirs:   app
    build-depends:    base >=4.19,
                      binary,
                      bytestring,
                      containers,
                      directory,
                      filepath,
                      ghc-persistent-worker-comm,
                      network,
                      optparse-applicative,
                      process,
                      stm,
                      unix
    default-language: GHC2021
