cabal-version:      3.4
name:               ghc-persistent-worker-server
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Ian-Woo Kim
maintainer:         ianwookim@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    ghc-options:      -Wall -Werror
    hs-source-dirs:   lib
    exposed-modules:  Pool
                      Server
                      Worker
    build-depends:    base >=4.19,
                      binary,
                      bytestring,
                      containers,
                      directory,
                      extra,
                      filepath,
                      ghc-persistent-worker-comm,
                      network,
                      optparse-applicative,
                      process,
                      stm,
                      transformers,
                      unix
    default-language: GHC2021

executable Server
    main-is:          Main.hs
    ghc-options:      -Wall -Werror
    hs-source-dirs:   app
    build-depends:    base >=4.19,
                      binary,
                      bytestring,
                      containers,
                      directory,
                      extra,
                      filepath,
                      ghc-persistent-worker-comm,
                      ghc-persistent-worker-server,
                      network,
                      optparse-applicative,
                      process,
                      stm,
                      transformers,
                      unix
    default-language: GHC2021
