cabal-version: 2.2
name: buck-worker-types
version: 0.1
synopsis: Buck2 GHC persistent worker
license: MIT
license-file: LICENSE
build-type: Simple

library
  ghc-options: -Wall -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages -O2
  default-language: GHC2021
  default-extensions:
    BlockArguments,
    DataKinds,
    DerivingStrategies,
    DuplicateRecordFields,
    LambdaCase,
    NamedFieldPuns,
    OverloadedLists,
    OverloadedRecordDot,
    OverloadedStrings,
    RecordWildCards,
    StrictData,
    TypeFamilies
  hs-source-dirs: src
  exposed-modules:
    Types.Args
    Types.BuckArgs
    Types.GhcHandler
    Types.Grpc
    Types.Orchestration
  build-depends:
    base ==4.*,
    containers,
    filepath,
    split
